# rust-learning

./: Cargo.toml  README.md
chess-terminal-player/: Cargo.toml  README.md
chess-terminal-player/src/: chessboard.rs  graphics.rs  main.rs
fluid_sim_coding_train/: Cargo.toml  README.md
fluid_sim_coding_train/src/: main.rs
guess-game/: Cargo.toml  LICENSE  README.md
guess-game/src/: main.rs
kaleidopaint/: Cargo.toml  README.md
kaleidopaint/src/: main.rs
sdl2-base-project/: Cargo.toml  README.md
sdl2-base-project/src/: main.rs
sdl2-base-project/src/pacman/: mod.rs  scene.rs
sdl2-base-project/src/rotatingwave/: color.rs  core.rs  mod.rs  paint.rs
vulkan-triangle/: Cargo.toml
vulkan-triangle/src/: main.rs
weather-threads/: .env-template  .gitignore  Cargo.toml  README.md  build.rs
weather-threads/src/: apikey-example  main.rs
