[package]
name = "fluid_dynamics"
version = "0.1.0"
authors = ["Ertugrul Karademir <ekarademir@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.16"
vulkano-win = "0.16"
vulkano-shaders = "0.16"
nannou = "0.12.0"
