[package]
name = "vulkan_experiment"
version = "0.1.0"
authors = ["Ertugrul Karademir <ekarademir@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "*"
vulkano-shaders = "*"
vulkano-win = "*"
winit = "*"
