[package]
name = "weather"
version = "0.1.0"
authors = ["Ertugrul Karademir <ekarademir@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.22.3"
curl = "0.4.33"
env_logger = "0.7.1"
log = { version = "0.4.11", features = ["release_max_level_info"] }
serde_json = "1.0.57"
